Fix for pagination button overlap with the footer
.ui.grid has margin-bottom: -1rem, and .law-projects is basically a
bunch of those nested within each other.

I'm adding some margin to the .law-projects container to counteract
that.  The number 1.5 rem was picked empirically to make the lobbyist
profile page look good.

I've checked: .law-projects is used in only one other place (MP
profile), and this CSS change doesn't affect renderin there in any way.

Fixes #102.

--- a/manoseimas/mps_v2/static/main.scss
+++ b/manoseimas/mps_v2/static/main.scss
@@ -70,6 +70,7 @@
 .law-projects {
   border-top: 1px solid #C8C8C8;
   padding-top: 2rem;
+  margin-bottom: 1.5rem;
 
   .eight.wide.column { padding-bottom: 0; }
   .ui.zero.margin.grid { margin: 0; }
